@@ -75,6 +75,7 @@ export("ads",
        "bai.out",
        "caps",
        "ccf.series.rwl",
+       "chron.ars",
        "chron",
        "chron.stabilized",
        "cms",
